--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
-    <head></head>
-    <body><p>hi</p></body>
+
+<head></head>
+
+<body>
+    <script>
+        setTimeout(function () {
+            window.location.href = 'login.php';
+        }, 500);
+    </script>
+</body>
+
 </html>
